# OpenGLRebuild

./: .gitignore  glad.c  main.cpp  meson.build
Libraries/include/glad/: glad.h
include/: Entity.hpp  Game.hpp  ResourceManager.hpp  Shader.hpp  Sprite.hpp  Texture.hpp  Window.hpp  deps.h  gl.hpp  meson.build
shaders/sprite/: sprite.frag
source/: Entity.cpp  Game.cpp  ResourceManager.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  Window.cpp  meson.build
