src = [
    'Entity.cpp',
    'Game.cpp',
    'ResourceManager.cpp',
    'Shader.cpp',
    'Sprite.cpp',
    'Texture.cpp',
    'Window.cpp',
    '../glad.c'
]
glBase = library('glBase',
                    src,
                    include_directories : inc,
                    dependencies : deps,
                    install : true)